Fix lookup box hiding behind chat

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -7,7 +7,7 @@ z-index:
  6 - palette
  7 - timer
  8 - login overlay
- 9 - ui blobs, lookup
+ 9 - ui blobs
 10 - admin boxes
 11 - drawer openers
 12 - drawer
@@ -15,6 +15,7 @@ z-index:
 19 - drawer opener in mobile
 20 - drawer in mobile mode
 21 - panels
+22 - lookup
 
 98 - lost connection
 99 - alert box
@@ -188,7 +189,7 @@ button.button.dark:disabled {
 #lookup {
     top: 50px;
     right: 16px;
-    z-index: 9;
+    z-index: 22;
     border-radius: 8px;
     border: 1px solid #ccc;
     background-color: #eee;
